--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,17 +6,21 @@ authors = [
     {name = "phil71x", email = "phil71x@live.com"},
 ]
 dependencies = [
-    "numpy==1.26.0",
+    "numpy<2.0",
+    "pandas",
+    "matplotlib>=3.3.0",
+    "seaborn>=0.11.0",
     "numpy-financial",
-    "pandas==2.1.1",
     "python-dateutil==2.8.2",
     "pytz==2023.3.post1",
     "six==1.16.0",
     "tzdata==2023.3",
-    "matplotlib",
     "beautifulsoup4",
     "statsmodels",
     "yfinance",
+    "ipykernel>=6.29.5",
+    "jupyter>=1.0.0",
+    "pyfolio-reloaded>=0.9.7",
 ]
 requires-python = "==3.9.*"
 readme = "README.md"
