--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,22 +6,9 @@ authors = [
     {name = "phil71x", email = "phil71x@live.com"},
 ]
 dependencies = [
-    "numpy<2.0",
-    "pandas",
-    "matplotlib>=3.3.0",
-    "seaborn>=0.11.0",
-    "numpy-financial",
-    "python-dateutil==2.8.2",
-    "pytz==2023.3.post1",
-    "six==1.16.0",
-    "tzdata==2023.3",
-    "beautifulsoup4",
-    "statsmodels",
-    "yfinance",
-    "ipykernel>=6.29.5",
-    "jupyter>=1.0.0",
-    "pyfolio-reloaded>=0.9.7",
-    "zipline-reloaded>=3.0.4",
+    "numpy>=2.0.2",
+    "pandas>=2.2.2",
+    "matplotlib>=3.9.2",
 ]
 requires-python = "==3.9.*"
 readme = "README.md"
@@ -30,3 +17,9 @@ license = {text = "MIT"}
 
 [tool.pdm]
 distribution = false
+python_use_pyenv = false
+python_path = "C:/Users/phil7/OneDrive/Code/coding_finance/.venv/Scripts/python.exe"
+
+[tool.pylint.format]
+# Compatibility with black
+max-line-length = "88"
