Modify pdm files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,11 +18,19 @@ license = {text = "MIT"}
 [tool.pdm]
 distribution = false
 python_use_pyenv = false
-python_path = "C:/Users/phil7/OneDrive/Code/coding_finance/.venv/Scripts/python.exe"
+# python_path = "C:/Users/phil7/OneDrive/Code/coding_finance/.venv/Scripts/python.exe"
+
 
 [tool.pdm.dev-dependencies]
-vscode = ["ipykernel>=6.29.5"]
+vscode = [
+    "ipykernel>=6.29.5"
+    ]
 common = {path = "../common", develop = true}
+dev = [
+    "black>=24.8.0",
+    "pylint>=3.2.7",
+]
+
 
 [tool.pylint.format]
 # Compatibility with black
