--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ dependencies = [
     "numpy>=2.0.2",
     "pandas>=2.2.2",
     "matplotlib>=3.9.2",
+    "statsmodels>=0.14.4",
+    "pandas-datareader>=0.10.0",
+    "yfinance>=0.2.54",
 ]
 requires-python = "==3.9.*"
 readme = "README.md"
